--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/Logo 2 (2).png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
@@ -30,8 +31,8 @@
             </nav>
         </header>
         <section>
-            <div class="item9">
-                <p class="text">¡¡Concretando ideas!!</p>
+            <div class="item9 bg">
+                <p class="text animacion">¡¡Concretando ideas!!</p>
                 <p class="text1">Armonizando el estilo y el rendimineto de nuestros productos desde 2002</p>
             </div>
         </section>
@@ -43,5 +44,6 @@
             </div>
         </footer>
     </main>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
